--- a/SA.Business/SA.Business.csproj
+++ b/SA.Business/SA.Business.csproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SA.Core\SA.Core.csproj" />
   </ItemGroup>
 
 </Project>
