--- a/SA.MVC/SA.MVC.csproj
+++ b/SA.MVC/SA.MVC.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SA.Business\SA.Business.csproj" />
     <ProjectReference Include="..\Sa.Repository\Sa.Repository.csproj" />
   </ItemGroup>
 
