--- a/SA.MVC/appsettings.json
+++ b/SA.MVC/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SAConnectionString": "Server=TRSERVER;Database=StudentAssigner;persist security info=True;User ID=sa;password=Dalmacija2@2@;"
+    "SAConnectionString": "Server=TRSERVER;Database=StudentAssigner;persist security info=True;User ID=sa;password=Dalmacija2@2@; Connection Timeout =30;"
   }
 }
